tests/data/php/shouldpass/IntParam.php
<?php

namespace BoxUK\Test;

/**
 * The int parameter should be ok 
 * 
 */
class MyClass {

    /**
     * Some comment
     *
     * @param int $id
     */
    public function find( $id ) {}

}

