tests/data/php/shouldfail/MissingDoc.php
<?php
/**
 * @package testdata.shouldfail
 */
class MissingParamDoc {
    public function stuff() {}
}